# cortecs

./: .bazelrc  .clang-format  .gitignore  LICENSE  MODULE.bazel  README.md  bazelw  bazelw.bat
.devcontainer/: devcontainer.json
.github/: renovate.json5
.github/workflows/: cache-dependencies.yml  conventional-commits.yml  daily-updates.yml  local-ci.sh  merge-queue.yml  pull-request.yml  update-bazelisk.py  update-calver.py  update-dependencies.py
docs/: components.md
source/cortecs/finalizer/: finalizer.c
source/cortecs/finalizer/public-headers/cortecs/: finalizer.h
source/cortecs/gc/: gc.c
source/cortecs/gc/public-headers/cortecs/: gc.h
source/cortecs/gc/test/: BUILD  test.c  test.cc
source/cortecs/json/: BUILD  json.c
source/cortecs/json/public-headers/cortecs/: json.h
source/cortecs/json/test/: BUILD
source/cortecs/lexer/: BUILD  lexer.c  span.c  tokens.c
source/cortecs/lexer/test/: BUILD  test_configs.c  test_configs.h  test_impls.c  test_impls.h  test_lexer.c  test_span.c
source/cortecs/log/: log.c
source/cortecs/log/public-headers/cortecs/: log.h
source/cortecs/log/test/: BUILD  test.c  test.cc
source/cortecs/lsp/: lsp.c
source/cortecs/parser/: parser.c
source/cortecs/string/: string.c
source/cortecs/string/public-headers/cortecs/: string.h
source/cortecs/string/test/: BUILD  test.c  test.cc
source/cortecs/types/: types.c
source/cortecs/types/public-headers/cortecs/: array.define.template.h  array.forward.template.h
source/cortecs/world/: world.c
source/cortecs/world/public-headers/cortecs/: world.h
toolchain/: BUILD
toolchain/args/: BUILD  BUILD.bazel
toolchain/linux/clang/: BUILD
toolchain/linux/clang/include/x86_64-unknown-linux-gnu/c++/v1/: __config_site
toolchain/linux/clang/lib/: runtime.json
toolchain/linux/clang/lib/clang/19/lib/x86_64-unknown-linux-gnu/: BUILD
toolchain/linux/sysroot/: BUILD
toolchain/linux/sysroot/usr/include/linux/netfilter/: xt_DSCP_.h
toolchain/linux/sysroot/usr/include/linux/netfilter_ipv4/: ipt_ECN_.h
toolchain/windows/clang/: BUILD
toolchain/windows/clang/include/x86_64-pc-windows-msvc/c++/v1/: __config_site
toolchain/windows/clang/lib/clang/19/include/: arm_neon.h
toolchain/windows/clang/lib/clang/19/lib/x86_64-pc-windows-msvc/: BUILD
toolchain/windows/clang/lib/x86_64-pc-windows-msvc/: libc++experimental.lib
