"Contains code related to the Cortecs programming language"
module(name = "cortecs")

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "googletest", version = "1.16.0")

bazel_dep(name = "flecs")
git_override(
    module_name = "flecs",
    remote = "https://github.com/SanderMertens/flecs.git",
    commit = "3b0ca37ec8bc41fc763068e728c6da2577ae9dae",
)

bazel_dep(name = "icu4c")
git_override(
    module_name = "icu4c",
    remote = "https://github.com/cortecs-lang/icu4c-bazel.git",
    commit = "4166e62e100fb84972352b681b92da3436e2001d",
)

# Usage:
# ./bazelw build //...
# ./bazelw run @hedron_compile_commands//:refresh_all
# Sometimes helpful to clear the bazel cache:
# ./bazelw clean --expunge
# rm -r $(./bazelw info repository_cache)

# If you get errors with clangd not able to find system headers,
# clangd hardcodes where to search for the headers relative to itself.
# To fix, you need to tell vscode's clangd extension to use the
# clangd from the toolchain and not the system. Should be hereish:
# echo $(pwd)/external/+_repo_rules2+clang-linux-x86_64/bin/clangd
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
git_repository(
    name = "cJSON",
    remote = "https://github.com/DaveGamble/cJSON.git",
    commit = "12c4bf1986c288950a3d06da757109a6aa1ece38",
    build_file_content = """
cc_library(
    name = "cJSON",
    srcs = ["cJSON.c"],
    hdrs = ["cJSON.h"],
    features = ["treat_warnings_as_errors"],
    includes = ["."],
    visibility = ["//visibility:public"],
)
""",
)

bazel_dep(name = "cortecs-cc-toolchain", dev_dependency = True)
git_override(
    module_name = "cortecs-cc-toolchain",
    remote = "https://github.com/cortecs-lang/cortecs-cc-toolchain.git",
    commit = "78792fba9eec75bfac14a0cd20cb0e4973175871",
)

register_toolchains(
    "@cortecs-cc-toolchain//:host_cc_toolchain",
    dev_dependency = True,
)
